[gd_scene load_steps=2 format=3 uid="uid://c4abt1xsvcvrh"]

[ext_resource type="Script" uid="uid://bi5cesrxq3dus" path="res://scenes/VADTest.gd" id="1_vad_test"]

[node name="VADTest" type="Window"]
oversampling_override = 1.0
title = "VAD Manager Test"
initial_position = 1
size = Vector2i(800, 600)
always_on_top = true
script = ExtResource("1_vad_test")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "VAD Manager Test"
horizontal_alignment = 1

[node name="HSeparator1" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Status: Initializing..."
horizontal_alignment = 1

[node name="SpeechProbLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Speech Probability: 0.00%"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "‚ñ∂ Start"

[node name="StopButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "‚èπ Stop"

[node name="ClearButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "üóë Clear Log"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="OutputLogLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Output Log:"

[node name="OutputLog" type="TextEdit" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
editable = false
wrap_mode = 1
